--- a/philo/Makefile
+++ b/philo/Makefile
@@ -28,7 +28,7 @@ re: fclean $(NAME)
 #ARG					=	4 410 200 200   # No philosopher should die.
 #ARG					=	4 310 200 100 7 # One philosopher should die.
 #ARG					=	1 800 200 200   # The philosopher should not eat and should die
-#ARG					=	5 410 200 100 7 # One philosopher should die.
+ARG					=	5 410 200 100 7 # One philosopher should die.
 #ARG					=	5 120 80 80 	# Moana tolds all will die
 #ARG					=	2 200 50 50 1
 
